feat: gofmt
